// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@createItem creates item 1`] = `
Object {
  "booleanProperty": false,
  "id": "1",
  "numberProperty": 1,
  "stringProperty": "foo",
}
`;

exports[`@createItem creates item when envelope is enabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {
    "booleanProperty": false,
    "id": "1",
    "numberProperty": 1,
    "stringProperty": "foo",
  },
  "status": 201,
}
`;
